--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pip-tools==3.1.0
 requests==2.18.4
+six==1.12.0
 SQLAlchemy==1.2.0
-urllib3==1.22
+urllib3==1.24.1
 Werkzeug==0.13
